# QSSLab

./: .gitignore  BUILD_PACKAGE.md  CMakeLists.txt  CMakePresets.json  README.md
resources/: resources.qrc
resources/styles/: fancy.qss
src/: CSSEditor.cpp  CSSEditor.h  CSSEditor.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
